--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
               
             </div>
           </div><!-- End Service Item -->
-          <div><a href="services.html#recent-blog-posts"><button class="formclr">Read more... <i class="bi bi-arrow-right"></i></button></a></div>
+          <div><a href="services.html"><button class="formclr">Read more... <i class="bi bi-arrow-right"></i></button></a></div>
         </div>
         
 
