--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="Al Dhab Engraving & Decoration offers premium Gypsum false ceiling decoration services. Redefine your space with elegance and quality |Gypsum Acoustic Partitions, Ceiling & Installation.">
 	<meta name="keywords" content="gypsum false ceiling, false ceiling designs, gypsum ceiling installation, decorative ceilings, suspended ceilings, ceiling contractors, interior ceiling design, commercial ceiling solutions">
 	<meta name="author" content="Al Dhab Engraving & Decoration LLC">
+	<link rel="icon" type="image/x-icon" href="assets/img/Logo/AED-Logo.png">
 
   <!-- Favicons -->
   <link href="assets/img/Logo/AED-Logo.png" rel="icon">
